--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"author" : "Nathan Broslawsky <nathan.broslawsky@nsfive.com>",
 	"main" : "./index.js",
 	"dependencies" : {
-		"async" : "0.1.22"
+		"async" : "0.1.22",
+		"optimist" : "0.3.4"
 	},
 	"scripts" : {
 		"start" : "node ./index.js"
